set basic style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button onclick="startGame()">Započni igru</button>
     </footer>
 
-    <div id="game-screen">
+    <div id="game-screen" class="game-screen">
       <h1>Hangman Igra</h1>
       <p id="quote"></p>
       <p>Error: <span id="errors">0</span>/6</p>
