remove test id from css file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <footer id="name-screen">
+    <footer id="name-screen" class="name-screen">
       <label for="username">Your name</label>
       <input type="text" id="username" placeholder="Name" />
       <button onclick="startGame()">Započni igru</button>
